--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,11 @@
   ],
   "env": {
     "PYTHONPATH": "$PYTHONPATH:./src"
-  }
+  },
+  "crons": [
+    {
+      "path": "/cron_together",
+      "schedule": "* * * * *"
+    }
+  ]
 }
